examples/real-world/blog_a-unikernel-firewall-for-qubesos/iptables-save
# Generated by iptables-save v1.4.21 on Mon Jan  4 14:55:01 2016
*raw
:PREROUTING ACCEPT [4:516]
:OUTPUT ACCEPT [4:280]
-A PREROUTING ! -s 10.137.2.15/32 -i vif112.0 -j DROP
COMMIT
# Completed on Mon Jan  4 14:55:01 2016
# Generated by iptables-save v1.4.21 on Mon Jan  4 14:55:01 2016
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [4:280]
:POSTROUTING ACCEPT [0:0]
:PR-QBS - [0:0]
:PR-QBS-SERVICES - [0:0]
-A PREROUTING -j PR-QBS
-A PREROUTING -j PR-QBS-SERVICES
-A POSTROUTING -o vif112.0 -j ACCEPT
-A POSTROUTING -o vif0.0 -j ACCEPT
-A POSTROUTING -o lo -j ACCEPT
-A POSTROUTING -j MASQUERADE
-A PR-QBS -d 10.137.2.1/32 -p udp -m udp --dport 53 -j DNAT --to-destination 10.137.1.1
-A PR-QBS -d 10.137.2.1/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 10.137.1.1
-A PR-QBS -d 10.137.2.254/32 -p udp -m udp --dport 53 -j DNAT --to-destination 10.137.1.254
-A PR-QBS -d 10.137.2.254/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 10.137.1.254
COMMIT
# Completed on Mon Jan  4 14:55:01 2016
# Generated by iptables-save v1.4.21 on Mon Jan  4 14:55:01 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [4:280]
-A INPUT -i vif112.0 -p udp -m udp --dport 68 -j DROP
-A INPUT -i vif0.0 -p udp -m udp --dport 68 -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i vif0.0 -j ACCEPT
-A FORWARD -i vif112.0 -o vif0.0 -j DROP
-A FORWARD -i vif112.0 -o vif112.0 -j DROP
-A FORWARD -s 10.137.2.15/32 -d 10.137.1.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -s 10.137.2.15/32 -d 10.137.1.254/32 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -s 10.137.2.15/32 -d 10.137.1.1/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -s 10.137.2.15/32 -d 10.137.1.254/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -s 10.137.2.15/32 -p icmp -j ACCEPT
-A FORWARD -s 10.137.2.15/32 -d 10.137.255.254/32 -p tcp -m tcp --dport 8082 -j DROP
-A FORWARD -s 10.137.2.15/32 -j ACCEPT
COMMIT
# Completed on Mon Jan  4 14:55:01 2016
